# godot-zx

./: .gitignore  404.html  Cargo.toml  Dockerfile.web  README.md  index.html  mkdocs.yml  sitemap.xml
.cargo/: config.toml
.github/workflows/: deploy_docs.yml
GodotProject/: default_bus_layout.tres  export_presets.cfg  godot_zx.gdextension  godot_zx.gdextension.uid  icon.svg.import  project.godot
GodotProject/.godot/: extension_list.cfg
GodotProject/.godot/editor/: GameMenu.tscn-folding-98ae67a05b23d1cd48d2cf00fffa35af.cfg  Launcher.tscn-editstate-ccc14319390343ee047b0506cb7b8dbc.cfg  Launcher.tscn-folding-ccc14319390343ee047b0506cb7b8dbc.cfg  Main128K.tscn-editstate-fe458951bee94a7a90dd30ac3f5f1714.cfg  Main128K.tscn-folding-fe458951bee94a7a90dd30ac3f5f1714.cfg  Main128K_Standalone.tscn-editstate-938fdbdb792a7eea09bcb2c296986431.cfg  Main128K_Standalone.tscn-folding-938fdbdb792a7eea09bcb2c296986431.cfg  Main48K.tscn-editstate-866d428ef766029842495b9d3a65e820.cfg  Main48K.tscn-folding-866d428ef766029842495b9d3a65e820.cfg  create_recent.Node  editor_layout.cfg  recent_dirs  (+17 more)
GodotProject/games/: README.md  znake.tap
GodotProject/roms/: README.md
docs/: index.md
docs/en/: build.md  controls.md  guide.md  index.md  standalone.md
docs/pt/: build.md  controls.md  guide.md  index.md  standalone.md
en/: index.html
en/controls/: index.html
en/guide/: index.html
en/standalone/: index.html
pt/: index.html
pt/controls/: index.html
pt/guide/: index.html
pt/standalone/: index.html
search/: search_index.json
src/: emulator_node.rs  host.rs  lib.rs
(+98 files in other folders)
